infra/k8s/other/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: ticketing.test
      http:
        paths:  
          - pathType: Prefix
            path: /api/auth/?(.*)
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
          - pathType: Prefix
            path: /api/bookings/?(.*)
            backend:
              service:
                name: bookings-srv
                port:
                  number: 3001
          - pathType: Prefix
            path: /api/events/?(.*)
            backend:
              service:
                name: events-srv
                port:
                  number: 3002 
          - pathType: Prefix
            path: /api/payments/?(.*)
            backend:
              service:
                name: payments-srv
                port:
                  number: 3004
          - pathType: Prefix
            path: /api/orders/?(.*)
            backend:
              service:
                name: orders-srv
                port:
                  number: 3005
          - pathType: Prefix
            path: /api/streaming/?(.*)
            backend:
              service:
                name: streaming-srv
                port:
                  number: 3006
